# bedrock-agent-rag-demo

./: README.md  deploy_kb.sh  kb_console.txt  policies.txt  pyproject.toml  readme.md  requirements.txt  upload_and_create.sh
src/: data_ingestion.py  lambda_function.py
src/agent/: action_group.json  agent_build.py  agent_chat.py  instruction.txt  utils.py
src/kb/: collection_build.py  kb_build.ipynb  kb_build.py  kb_utils.py
terraform-kb/: main.tf
terraform-kb/bedrock-kb/: main.tf  variables.tf
terraform-kb/opensearch/: main.tf  outputs.tf
terraform-lambda/: main.tf
terraform-s3/: main.tf
